--- a/index.html
+++ b/index.html
@@ -256,6 +256,28 @@
         const MOVEMENT_SPEED2 = 30;
 
         document.addEventListener("keydown", (event) => {
+          // // Keyup
+          // if(event.keyCode == 38 || event.keyCode == 87){
+          //  y -= MOVEMENT_SPEED;
+          // }
+          // // Keydown
+          // else if(event.keyCode == 40 || event.keyCode == 83){
+          //   y += MOVEMENT_SPEED;
+          // }
+          // y = 350; 
+
+
+
+          //console.log(y);
+          // Key left: Left Arrow Key and A key
+          //if(event.keyCode == 39 || event.keyCode == 68){
+          //  x += MOVEMENT_SPEED;
+          //}
+          //// Key Right: Right Arrow Key and D key
+          //else if(event.keyCode == 37 || event.keyCode == 65)
+          //{
+          //  x -= MOVEMENT_SPEED;
+          //}
 
           switch(event.keyCode){
             //UP Keys LISTED FIRST
