removed folder and moved image location

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         let img2 = new Image();
 
-        img2.src = "images/space.png";
+        img2.src = "space.png";
 
     window.onload = function() {
       // the initial image height
@@ -227,7 +227,7 @@
           // clear the canvas
           ctx.clearRect(0,0,c.width,c.height);
           //ctx.drawImage(img2,0,0);
-          //ctx.fillStyle = "#784284";
+          ctx.fillStyle = "#784284";
 
           // calculate and update vars
           frames += 1;
